--- a/BOJ/BOJ.vcxproj.filters
+++ b/BOJ/BOJ.vcxproj.filters
@@ -42,5 +42,8 @@
     <ClCompile Include="15683감시.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="15683감시_2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
