--- a/BOJ/BOJ.vcxproj.filters
+++ b/BOJ/BOJ.vcxproj.filters
@@ -75,5 +75,14 @@
     <ClCompile Include="15651N과M3.cpp">
       <Filter>소스 파일\백트래킹</Filter>
     </ClCompile>
+    <ClCompile Include="6593.cpp">
+      <Filter>소스 파일\BFS</Filter>
+    </ClCompile>
+    <ClCompile Include="6593_2.cpp">
+      <Filter>소스 파일\BFS</Filter>
+    </ClCompile>
+    <ClCompile Include="6593_3.cpp">
+      <Filter>소스 파일\BFS</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
