--- a/BOJ/BOJ.vcxproj.filters
+++ b/BOJ/BOJ.vcxproj.filters
@@ -162,5 +162,11 @@
     <ClCompile Include="15665.cpp">
       <Filter>소스 파일\백트래킹</Filter>
     </ClCompile>
+    <ClCompile Include="15666.cpp">
+      <Filter>소스 파일\백트래킹</Filter>
+    </ClCompile>
+    <ClCompile Include="연습.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
