--- a/YS/YS.vcxproj.filters
+++ b/YS/YS.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="소스 파일\테스트">
       <UniqueIdentifier>{b1b1343d-a574-4b69-bb9e-55aa9a3db37e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\0109%283일차%29">
+      <UniqueIdentifier>{3f9fd342-3dbb-42a6-b6ee-0191698cea90}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="day1_1.cpp">
@@ -42,8 +45,20 @@
     <ClCompile Include="day2_3.cpp">
       <Filter>소스 파일\0106%282일차%29</Filter>
     </ClCompile>
-    <ClCompile Include="테스트.cpp">
+    <ClCompile Include="t2.cpp">
       <Filter>소스 파일\테스트</Filter>
+    </ClCompile>
+    <ClCompile Include="day3_1.cpp">
+      <Filter>소스 파일\0109%283일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="분수를소수로.cpp">
+      <Filter>소스 파일\0109%283일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="gcdLcm.cpp">
+      <Filter>소스 파일\0109%283일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="day3_2.cpp">
+      <Filter>소스 파일\0109%283일차%29</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
