--- a/YS/YS.vcxproj.filters
+++ b/YS/YS.vcxproj.filters
@@ -60,5 +60,8 @@
     <ClCompile Include="day3_2.cpp">
       <Filter>소스 파일\0109%283일차%29</Filter>
     </ClCompile>
+    <ClCompile Include="day3_3.cpp">
+      <Filter>소스 파일\0109%283일차%29</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
