--- a/BOJ/BOJ.vcxproj.filters
+++ b/BOJ/BOJ.vcxproj.filters
@@ -34,6 +34,9 @@
     <Filter Include="소스 파일\정렬2">
       <UniqueIdentifier>{98dbf35b-1053-41ab-95db-1256eff271f3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\정렬2\두다안">
+      <UniqueIdentifier>{c5364f23-b6d9-4d2e-b6e1-925c54234557}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="15683감시.cpp">
@@ -179,6 +182,15 @@
     </ClCompile>
     <ClCompile Include="11652.cpp">
       <Filter>소스 파일\정렬2</Filter>
+    </ClCompile>
+    <ClCompile Include="2910.cpp">
+      <Filter>소스 파일\정렬2</Filter>
+    </ClCompile>
+    <ClCompile Include="2910_2.cpp">
+      <Filter>소스 파일\정렬2</Filter>
+    </ClCompile>
+    <ClCompile Include="10825.cpp">
+      <Filter>소스 파일\정렬2\두다안</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
